<resources>
    <string name="app_name">Traslados Rollos</string>
    <string name="alm_origen">Por favor lea etiqueta destino</string>
    <string name="cent_dest">Centro Destino</string>
    <string name="alm_dest">Almcén Destino</string>
    <string name="transportadora">Por favor lea etiqueta transportador</string>
    <string name="placa">Placa</string>
    <string name="title_activity_lectura">LecturaActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Pausar Transporte</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="textoCol1">Lote</string>
    <string name="textoCol2">Material</string>
    <string name="textoCol3">Peso</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="otroTransporte">Reanudar transporte anterior</string>
    <string name="lector">Leer etiqueta del Rollo</string>
    <string name="cant_rollos">Cant.Rollos</string>


</resources>
